force-app/main/default/objects/ProductTerms__c/ProductTerms__c.object-meta.xml
<CustomObject>
    <label>商品規約</label>
    <nameField>
        <label>商品規約管理番号</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>