force-app/main/default/objects/ProductTerms__c/fields/NumberSortTermsStatement__c.field-meta.xml
<CustomField>
    <fullName>NumberSortTermsStatement__c</fullName>
    <label>規約文並び替え番号</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>