force-app/main/default/objects/ProductTerms__c/fields/TermsName__c.field-meta.xml
<CustomField>
    <fullName>TermsName__c</fullName>
    <label>規約名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>