force-app/main/default/objects/ProductTerms__c/fields/TermsStatement__c.field-meta.xml
<CustomField>
    <fullName>TermsStatement__c</fullName>
    <label>規約文</label>
    <type>TextArea</type>
</CustomField>