force-app/main/default/objects/ProductTerms__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TermsName__c</columns>
    <columns>NumberSortTermsStatement__c</columns>
    <columns>TermsStatement__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>