force-app/main/default/objects/ProductTerms__c/listViews/GM_ProductTerms.listView-meta.xml
<ListView>
    <fullName>GM_ProductTerms</fullName>
    <filterScope>Queue</filterScope>
    <label>GM</label>
    <queue>GM</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>